# clang-with-fasm-example

./: .gitignore  CMakeLists.txt  magic.asm  main.c
